[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/charactersprite1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Jump.mp3" type="AudioStream" id=4]
[ext_resource path="res://Sounds/KillEnemy.mp3" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 69.5 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 22, 4 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 17.5, 3.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 140, 24 )
current = true
zoom = Vector2( 1.2, 1.2 )
process_mode = 0
limit_smoothed = true
smoothing_enabled = true
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -10.875, 1.875 )
scale = Vector2( 0.276855, 0.276855 )
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, -5.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 6 )
anims/RESET = SubResource( 3 )
anims/Walk = SubResource( 4 )

[node name="KillerArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillerArea"]
position = Vector2( -5, 63 )
shape = SubResource( 5 )

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
position = Vector2( -26, -76 )
enabled = true
cast_to = Vector2( 0, -35 )
collision_mask = 4

[node name="RayCast2DRight" type="RayCast2D" parent="."]
position = Vector2( 18, -76 )
enabled = true
cast_to = Vector2( 0, -35 )
collision_mask = 4

[node name="RayCast2DBottom" type="RayCast2D" parent="."]
position = Vector2( 16, 52 )
enabled = true
cast_to = Vector2( 0, 19 )
collision_mask = 4

[node name="RayCast2DBottom2" type="RayCast2D" parent="."]
position = Vector2( -24, 51 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 4

[node name="JumpSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="KillSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="JumpSoundArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpSoundArea2D"]
position = Vector2( -5.5, 68.5 )
shape = SubResource( 7 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="JumpSoundArea2D" to="." method="_on_JumpSoundArea2D_body_entered"]
